--- a/D14/index.html
+++ b/D14/index.html
@@ -27,47 +27,27 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
+                class="nav-link active"
+                aria-current="page"
+                href="./backoffice.html"
+                >Backoffice</a
               >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-8">
+      <div class="row justify-content-center mt-3">
+        <div class="col-12 col-md-8 text-center">
           <h2>EpiTicket Store</h2>
         </div>
-        <div class="col-12">
-          <div class="row">
-            <div class="col-12 col-md-3">
+        <div class="col-12 mt-5">
+          <div class="row" id="events-container">
+            <!-- <div class="col-12 col-md-3">
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -78,11 +58,62 @@
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
     </div>
+    <script>
+      const AGENDA_URL = 'https://striveschool-api.herokuapp.com/api/agenda/'
+
+      // recuperiamo gli eventi disponibili, e manipoliamo il DOM creando una col
+      // per ognuno di essi
+
+      const getEvents = function () {
+        // parte la fetch()
+        fetch(AGENDA_URL) // fa una GET
+          .then((res) => {
+            console.log('RES', res)
+            if (res.ok) {
+              // andiamo avanti!
+              return res.json() // otteniamo i dati
+            } else {
+              throw new Error('Errore nel recupero degli eventi!')
+            }
+          })
+          .then((data) => {
+            console.log('EVENTI IN DB', data)
+            // inseriamo della logica per creare le colonne a partire dall'array data
+            data.forEach((event) => {
+              let colTemplate = `
+              <div class="col-12 col-md-3">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              `
+
+              let rowReference = document.getElementById('events-container') // <div class="row"></div>
+              rowReference.innerHTML += colTemplate // aggiungo colTemplate all'attuale contenuto di rowReference
+            })
+          })
+          .catch((error) => {
+            console.log(error)
+          })
+      }
+
+      window.onload = () => {
+        // all'avvio di index.html lancio getEvents()
+        getEvents()
+      }
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
